--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="object"></div>
         <div class="object"></div>
     </div>
-    <img src="bg/IMG-20200702-WA0040.jpg" alt="" />
+    <img src="image/back.jpg" alt="" />
     <style>
         .p-animation {
             width: 100%;
@@ -41,6 +41,11 @@
                 opacity: 0;
                 visibility: hidden;
             }
+        }
+        
+        img {
+            width: 100%;
+            height: 100%;
         }
         
         .object {
